fixes after reading

--- a/references.bib
+++ b/references.bib
@@ -605,6 +605,21 @@
   year = {2020}
 }
 
+@phdthesis{carvalhoParticipatoryDesignBehaviour2020a,
+  type = {Thesis},
+  title = {Participatory Design for Behaviour Change: An Integrative Approach to Improving Healthcare Practice Focused on Staff Participation},
+  shorttitle = {Participatory Design for Behaviour Change},
+  author = {Carvalho, Fernando},
+  year = {2020},
+  month = jun,
+  doi = {10.26174/thesis.lboro.12301880.v1},
+  urldate = {2024-05-20},
+  abstract = {This thesis explores the application of participatory design and behaviour change in the process of planning and developing quality and safety improvement interventions within the hospital environment. This focus is examined through the empirical investigation of a real-life improvement process, looking at the diagnosis and management of Urinary Tract Infection (UTI) in older adults within the busy environment of an Emergency Department.A review of the literature helped identify that, whilst a behavioural approach to healthcare has been employed with some measured success at a public health level, its application at the healthcare service level has been less explored and studied. Furthermore, there has been an acknowledged necessity to better integrate stakeholder engagement in behaviour change interventions, but such integration is underplayed and underexplored by current frameworks.A comprehensive participatory action research project -- encompassing workshops, focus groups, interviews, meetings and digital communication led and facilitated by the researcher -- was conducted with the engagement of over fifty staff, including nurses, doctors, managers, pharmacists and microbiologists working in various departments of a large NHS University Hospital in the East Midlands region of the UK. The improvement project followed the stepwise process of the Behaviour Change Wheel framework, while also observing the premises and principles of stakeholder participation, put forth by participatory design practice. The research resulted in an original integrative approach, which developed from the work involving researcher and stakeholders in a process of cyclical reflection-in-action. This iterative process facilitated the recognition of specific ways whereby staff wanted to and could be involved throughout the intervention; it also led to the adaptation of selected tools and the incorporation of new tools tailored to the expertise, preferences and priorities sought by the group of stakeholders.Collectively, the study findings identified the need for a new behaviour change support framework for participatory use. Likewise, they also indicate that the degree of stakeholder engagement normally expected from a participatory design process is often not feasible -- and sometimes, not wanted -- within the hospital context. Healthcare professionals have time limitations that need to be respected and the rationale for participation should follow real, rather than ideal possibilities of engagement. The findings led to the identification of specific recommendations that should be considered when looking at the advantages and disadvantages, facilitators and barriers, motivations, and hierarchical issues of involving healthcare staff in participatory quality improvement projects.Finally, this thesis proposes an original approach -- the Participatory Design for Behaviour Change framework -- which integrates behavioural theory, models and tools, with participatory principles and methods. The framework underwent various iterations, and a final validation with a group of qualified healthcare professionals who had not taken part in the original intervention process. Opportunities for further research are presented to evaluate the applicability and effectiveness of the proposed framework within similar healthcare contexts, especially in comparison with existing alternative approaches.},
+  langid = {english},
+  school = {Loughborough University},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Carvalho_2020_Participatory design for behaviour change.pdf}
+}
+
 @article{caulleyCitationImpactWas2020,
   title = {Citation Impact Was Highly Variable for Reporting Guidelines of Health Research: A Citation Analysis},
   shorttitle = {Citation Impact Was Highly Variable for Reporting Guidelines of Health Research},
@@ -1563,6 +1578,28 @@
   file = {/Users/james/Zotero/storage/IZKCK4T9/Howell et al_2015_The effect of the SQUIRE (Standards of QUality Improvement Reporting.pdf;/Users/james/Zotero/storage/6HI3NYQM/400.html;/Users/james/Zotero/storage/T3D2NEJY/400.html}
 }
 
+@misc{https://www.skillzone.netDefinitionPairedDepth,
+  title = {Definition: {{Paired}} Depth Interview},
+  shorttitle = {Definition},
+  author = {{https://www.skillzone.net}, Skill Zone Ltd},
+  journal = {Association for Qualitative Research (AQR)},
+  urldate = {2024-05-20},
+  abstract = {In qualitative research a paired depth interview (or just `paired depth') is an interview conducted with two people.},
+  howpublished = {https://www.aqr.org.uk/glossary/paired-depth-interview},
+  langid = {english}
+}
+
+@misc{https://www.skillzone.netDefinitionTriad,
+  title = {Definition: {{Triad}}},
+  shorttitle = {Definition},
+  author = {{https://www.skillzone.net}, Skill Zone Ltd},
+  journal = {Association for Qualitative Research (AQR)},
+  urldate = {2024-05-20},
+  abstract = {A form of depth interview involving three participants, who may or may not know each other.},
+  howpublished = {https://www.aqr.org.uk/glossary/triad},
+  langid = {english}
+}
+
 @article{husereauConsolidatedHealthEconomic2013a,
   title = {Consolidated {{Health Economic Evaluation Reporting Standards}} ({{CHEERS}}) Statement},
   author = {Husereau, Don and Drummond, Michael and Petrou, Stavros and Carswell, Chris and Moher, David and Greenberg, Dan and Augustovski, Federico and Briggs, Andrew H. and Mauskopf, Josephine and Loder, Elizabeth},
@@ -2471,6 +2508,25 @@ Subject\_term\_id: authorship;ethics;funding;journalism;publishing},
   urldate = {2023-10-03},
   abstract = {Pastel is the easiest, and fastest way for web designers, developers, and agencies to collect feedback on the websites they're building.},
   howpublished = {https://usepastel.com/}
+}
+
+@article{pellyNovelBehaviourChange2023,
+  title = {Novel Behaviour Change Frameworks for Digital Health Interventions: {{A}} Critical Review},
+  shorttitle = {Novel Behaviour Change Frameworks for Digital Health Interventions},
+  author = {Pelly, Melissa and Fatehi, Farhad and Liew, Danny and {Verdejo-Garcia}, Antonio},
+  year = {2023},
+  month = sep,
+  journal = {Journal of Health Psychology},
+  volume = {28},
+  number = {10},
+  pages = {970--983},
+  issn = {1359-1053},
+  doi = {10.1177/13591053231164499},
+  urldate = {2024-05-20},
+  abstract = {Digital health interventions -- interventions delivered over digital media to support the health of users -- are becoming increasingly prevalent. Utilising an intervention development framework can increase the efficacy of digital interventions for health-related behaviours. This critical review aims to outline and review novel behaviour change frameworks that guide digital health intervention development. Our comprehensive search for preprints and publications used PubMed, PsycINFO, Scopus, Web of Science and the Open Science Framework repository. Articles were included if they: (1) were peer-reviewed; (2) proposed a behaviour change framework to guide digital health intervention development; (3) were written in English; (4) were published between 1/1/19 and 1/8/2021; and (5) were applicable to chronic diseases. Intervention development frameworks considered the user, intervention elements and theoretical foundations. However, the timing and policy of interventions are not consistently addressed across frameworks. Researchers should deeply consider the digital applicability of behaviour change frameworks to improve intervention success.},
+  pmcid = {PMC10466959},
+  pmid = {37051615},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Pelly et al_2023_Novel behaviour change frameworks for digital health interventions.pdf}
 }
 
 @misc{PenelopeAi,
