removing lingering #REFs and #ASKs

--- a/references.bib
+++ b/references.bib
@@ -2115,6 +2115,24 @@ Subject\_term\_id: authorship;ethics;funding;journalism;publishing},
   file = {/Users/james/Zotero/storage/3RNGGXPU/McDonough et al_Familiarity of Non-industry Authors With Good Publication Practice and Clinical.pdf;/Users/james/Zotero/storage/EH9LYLMS/McDonough J. et al_2011_Familiarity of non-industry authors with good publication practice and clinical.pdf}
 }
 
+@article{mcgrathTwelveTipsConducting2019,
+  title = {Twelve Tips for Conducting Qualitative Research Interviews},
+  author = {McGrath, Cormac and Palmgren, Per J. and Liljedahl, Matilda},
+  year = {2019},
+  month = sep,
+  journal = {Medical Teacher},
+  volume = {41},
+  number = {9},
+  pages = {1002--1006},
+  publisher = {Taylor \& Francis},
+  issn = {0142-159X},
+  doi = {10.1080/0142159X.2018.1497149},
+  urldate = {2024-05-21},
+  abstract = {The qualitative research interview is an important data collection tool for a variety of methods used within the broad spectrum of medical education research. However, many medical teachers and life science researchers undergo a steep learning curve when they first encounter qualitative interviews, both in terms of new theory but also regarding new methods of inquiry and data collection. This article introduces the concept of qualitative research interviews for novice researchers within medical education, providing 12 tips for conducting qualitative research interviews.},
+  pmid = {30261797},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/McGrath et al_2019_Twelve tips for conducting qualitative research interviews.pdf}
+}
+
 @misc{MedRxivOrgPreprint,
   title = {{{medRxiv}}.Org - the Preprint Server for {{Health Sciences}}},
   urldate = {2023-10-17},
@@ -2434,6 +2452,12 @@ Subject\_term\_id: authorship;ethics;funding;journalism;publishing},
   pmid = {26369893},
   keywords = {_tablet,Healthcare quality improvement,Quality improvement,Quality improvement methodologies},
   file = {/Users/james/Zotero/storage/NC3CMIRK/Ogrinc et al_2016_SQUIRE 2.pdf}
+}
+
+@misc{OnlineSurveys,
+  title = {Online Surveys},
+  urldate = {2024-05-21},
+  langid = {british}
 }
 
 @article{pagePRISMA2020Statement2021,
