removing TODOs and DECIDEs

--- a/references.bib
+++ b/references.bib
@@ -3285,6 +3285,23 @@ Subject\_term\_id: authorship;ethics;funding;journalism;publishing},
   file = {/Users/james/Zotero/storage/AQCWPYXW/von Elm et al_2007_Strengthening the reporting of observational studies in epidemiology (STROBE).pdf}
 }
 
+@incollection{wallachUserCenteredDesignWhy2012,
+  title = {User-{{Centered Design}}: {{Why}} and {{How}} to {{Put Users First}} in {{Software Development}}},
+  shorttitle = {User-{{Centered Design}}},
+  booktitle = {Software for {{People}}: {{Fundamentals}}, {{Trends}} and {{Best Practices}}},
+  author = {Wallach, Dieter and Scholz, Sebastian C.},
+  editor = {Maedche, Alexander and Botzenhardt, Achim and Neer, Ludwig},
+  year = {2012},
+  pages = {11--38},
+  publisher = {Springer},
+  address = {Berlin, Heidelberg},
+  doi = {10.1007/978-3-642-31371-4_2},
+  urldate = {2024-05-21},
+  abstract = {In this chapter we provide an overview of the activities and artefacts of the user-centered design (UCD) methodology -- a successful and practical approach to the design of software user interfaces. After tracing its foundational principles (early focus on users, empirical measurement using prototypes and iterative design) back to 1985s seminal paper by Gould and Lewis, we will highlight each of five central categories of design activities (Scope, Analyse, Design, Validate and Deliver) performed in UCD. Potential integration of UCD into two popular categorizations of software development (User Interface First vs. User Interface Later) will be explored and then demonstrated in a real life case study from the field of electronic engineering along with a practical takeaway regarding the relationship of UCD and eLearning.},
+  isbn = {978-3-642-31371-4},
+  langid = {english}
+}
+
 @misc{WanfangDataLeading,
   title = {Wanfang {{Data}} - {{A Leading Provider}} of {{Electronic Resources}} for {{China Studies}}},
   urldate = {2021-03-01},
