adds appendices and info to intro

--- a/references.bib
+++ b/references.bib
@@ -786,6 +786,17 @@
   file = {/Users/james/Zotero/storage/DB3FY8RQ/ARRIVE Compliance Questionnaire.pdf}
 }
 
+@misc{Covid19ResponseExcess2024,
+  title = {Covid-19: {{Response}} and {{Excess Deaths}} - {{Hansard}} - {{UK Parliament}}},
+  shorttitle = {Covid-19},
+  year = {2024},
+  month = jun,
+  urldate = {2024-06-10},
+  abstract = {Hansard record of the item : ' Covid-19: Response and Excess Deaths' on Thursday 18 April 2024.},
+  howpublished = {https://hansard.parliament.uk/commons/2024-04-18/debates/9F01F787-D758-43D4-B8D1-4FA357EB3EED/Covid-19ResponseAndExcessDeaths},
+  langid = {english}
+}
+
 @misc{craigDevelopingEvaluatingComplex2021,
   title = {Developing and Evaluating Complex Interventions},
   author = {Craig, Peter and Dieppe, Paul and Macintyre, Sally and Michie, Susan and Nazareth, Irwin and Petticrew, Mark},
@@ -1742,6 +1753,23 @@
   file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Jones et al_2019_Why is reporting quality improvement so hard.pdf}
 }
 
+@article{kappTransparencyReportingCharacteristics2022,
+  title = {Transparency and Reporting Characteristics of {{COVID-19}} Randomized Controlled Trials},
+  author = {Kapp, Philipp and Esmail, Laura and Ghosn, Lina and Ravaud, Philippe and Boutron, Isabelle},
+  year = {2022},
+  month = sep,
+  journal = {BMC Medicine},
+  volume = {20},
+  number = {1},
+  pages = {363},
+  issn = {1741-7015},
+  doi = {10.1186/s12916-022-02567-y},
+  urldate = {2024-06-10},
+  abstract = {In the context of the COVID-19 pandemic, randomized controlled trials (RCTs) are essential to support clinical decision-making. We aimed (1) to assess and compare the reporting characteristics of RCTs between preprints and peer-reviewed publications and (2) to assess whether reporting improves after the peer review process for all preprints subsequently published in peer-reviewed journals.},
+  keywords = {CONSORT,COVID-19,Peer review; Completeness of reporting,Quality of reporting,Randomized controlled trial,Selection bias,Selective outcome reporting,Transparency},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Kapp et al_2022_Transparency and reporting characteristics of COVID-19 randomized controlled.pdf}
+}
+
 @article{karadagoncelKnowledgeAwarenessOptimal2018a,
   title = {Knowledge and Awareness of Optimal Use of Reporting Guidelines in Paediatricians: {{A}} Cross-Sectional Study},
   shorttitle = {Knowledge and Awareness of Optimal Use of Reporting Guidelines in Paediatricians},
@@ -2632,6 +2660,25 @@ Subject\_term\_id: authorship;ethics;funding;journalism;publishing},
   langid = {english}
 }
 
+@article{pourrazaviCOVID19VaccineHesitancy2023,
+  title = {{{COVID-19}} Vaccine Hesitancy: {{A Systematic}} Review of Cognitive Determinants},
+  shorttitle = {{{COVID-19}} Vaccine Hesitancy},
+  author = {Pourrazavi, Sara and Fathifar, Zahra and Sharma, Manoj and Allahverdipour, Hamid},
+  year = {2023},
+  month = apr,
+  journal = {Health Promotion Perspectives},
+  volume = {13},
+  number = {1},
+  pages = {21--35},
+  issn = {2228-6497},
+  doi = {10.34172/hpp.2023.03},
+  urldate = {2024-06-10},
+  abstract = {Background: Although mass vaccination is considered one of the most effective public health strategies during the pandemic, in the COVID-19 era, many people considered vaccines unnecessary and, or doubted the effectiveness of the COVID-19 vaccine. This review aimed to tabulate cognitive causes of COVID-19 vaccination hesitancy, which may help public health policymakers overcome the barriers to mass vaccinations in future pandemics. , Methods: For this systematic review, studies pertaining to COVID-19 vaccine hesitancy published up to June 2022 were retrieved from six online databases (Cochrane Library, Google Scholar Medline through PubMed, Scopus, and Web of Science). Inclusion criteria were the studies conducted on people who had a delay in accepting or refusing COVID-19 vaccines, reported the impact of cognitive determinants on vaccine hesitancy, and were written in English in the timeframe of 2020--2022. , Results: This systematic review initially reviewed 1171 records. From these 91 articles met the inclusion criteria. The vaccination hesitation rate was 29.72\% on average. This systematic review identified several cognitive determinants influencing vaccination hesitancy. Lack of confidence and complacency were the most frequent factors that predicted vaccine hesitancy. , Conclusion: The identified prevailing cognitive determinants for COVID-19 vaccine hesitancy indicated that using initiative and effective communication strategies would be a determinant factor in building people's trust in vaccines during the pandemic and mass vaccinations.},
+  pmcid = {PMC10257562},
+  pmid = {37309435},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Pourrazavi et al_2023_COVID-19 vaccine hesitancy.pdf}
+}
+
 @article{pouwelsQualityReportingConfounding2016,
   title = {Quality of Reporting of Confounding Remained Suboptimal after the~{{STROBE}} Guideline},
   author = {Pouwels, Koen B. and Widyakusuma, Niken N. and Groenwold, Rolf H. H. and Hak, Eelko},
@@ -2862,6 +2909,25 @@ Subject\_term\_id: authorship;ethics;funding;journalism;publishing},
   pmid = {37271424},
   keywords = {Checklist,Checklists,Replicability,Reproducibility,Research waste,Research-on-research},
   file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Santo et al_2023_Methods and results of studies on reporting guideline adherence are poorly.pdf}
+}
+
+@article{savovicAssociationRiskofBiasAssessments2018,
+  title = {Association {{Between Risk-of-Bias Assessments}} and {{Results}} of {{Randomized Trials}} in {{Cochrane Reviews}}: {{The ROBES Meta-Epidemiologic Study}}},
+  shorttitle = {Association {{Between Risk-of-Bias Assessments}} and {{Results}} of {{Randomized Trials}} in {{Cochrane Reviews}}},
+  author = {Savovi{\'c}, Jelena and Turner, Rebecca M and Mawdsley, David and Jones, Hayley E and Beynon, Rebecca and Higgins, Julian P T and Sterne, Jonathan A C},
+  year = {2018},
+  month = may,
+  journal = {American Journal of Epidemiology},
+  volume = {187},
+  number = {5},
+  pages = {1113--1122},
+  issn = {0002-9262},
+  doi = {10.1093/aje/kwx344},
+  urldate = {2024-06-11},
+  abstract = {Flaws in the design of randomized trials may bias intervention effect estimates and increase between-trial heterogeneity. Empirical evidence suggests that these problems are greatest for subjectively assessed outcomes. For the Risk of Bias in Evidence Synthesis (ROBES) Study, we extracted risk-of-bias judgements (for sequence generation, allocation concealment, blinding, and incomplete data) from a large collection of meta-analyses published in the Cochrane Library (issue 4; April 2011). We categorized outcome measures as mortality, other objective outcome, or subjective outcome, and we estimated associations of bias judgements with intervention effect estimates using Bayesian hierarchical models. Among 2,443 randomized trials in 228 meta-analyses, intervention effect estimates were, on average, exaggerated in trials with high or unclear (versus low) risk-of-bias judgements for sequence generation (ratio of odds ratios (ROR) = 0.91, 95\% credible interval (CrI): 0.86, 0.98), allocation concealment (ROR = 0.92, 95\% CrI: 0.86, 0.98), and blinding (ROR = 0.87, 95\% CrI: 0.80, 0.93). In contrast to previous work, we did not observe consistently different bias for subjective outcomes compared with mortality. However, we found an increase in between-trial heterogeneity associated with lack of blinding in meta-analyses with subjective outcomes. Inconsistency in criteria for risk-of-bias judgements applied by individual reviewers is a likely limitation of routinely collected bias assessments. Inadequate randomization and lack of blinding may lead to exaggeration of intervention effect estimates in randomized trials.},
+  pmcid = {PMC5928453},
+  pmid = {29126260},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Savović et al_2018_Association Between Risk-of-Bias Assessments and Results of Randomized Trials.pdf}
 }
 
 @article{schulzCONSORT2010Statement2010,
@@ -3110,6 +3176,25 @@ Subject\_term\_id: authorship;ethics;funding;journalism;publishing},
   pmid = {31005930},
   keywords = {_tablet,*nursing,*Nursing,*perception,*Periodicals as Topic/sn [Statistics \& Numerical Data],*publishing,*Quality Control,*Records/sn [Statistics \& Numerical Data],*Review Literature as Topic,adult,Cesarean Section,controlled study,Databases,e-mail,Evidence-Based Medicine,Factual,female,human,human experiment,Humans,Likert scale,male,Medline,meta analysis,PRISMA,publication policy,QES-include,quality of reporting,questionnaire,registration,research reporting,review,systematic review,systematic reviews},
   file = {/Users/james/Zotero/storage/32XARQJR/Tam et al_2019_Perception of the Preferred Reporting Items for Systematic Reviews and.pdf;/Users/james/Zotero/storage/RE4CINKF/Tam et al_2019_Perception of the Preferred Reporting Items for Systematic Reviews and.pdf;/Users/james/Zotero/storage/2AJR4NKP/e026271.html}
+}
+
+@article{taylorNegativeAttitudesFacemasks2021,
+  title = {Negative Attitudes about Facemasks during the {{COVID-19}} Pandemic: {{The}} Dual Importance of Perceived Ineffectiveness and Psychological Reactance},
+  shorttitle = {Negative Attitudes about Facemasks during the {{COVID-19}} Pandemic},
+  author = {Taylor, Steven and Asmundson, Gordon J. G.},
+  year = {2021},
+  month = feb,
+  journal = {PLoS ONE},
+  volume = {16},
+  number = {2},
+  pages = {e0246317},
+  issn = {1932-6203},
+  doi = {10.1371/journal.pone.0246317},
+  urldate = {2024-06-10},
+  abstract = {This study reports a comprehensive empirical investigation of the nature and correlates of anti-mask attitudes during the COVID-19 pandemic. Accumulating evidence underscores the importance of facemasks, as worn by the general public, in limiting the spread of infection. Accordingly, mask wearing has become increasingly mandatory in public places such as stores and on public transit. Although the public has been generally adherent to mask wearing, a small but vocal group of individuals refuse to wear masks. Anti-mask protest rallies have occurred in many places throughout the world, sometimes erupting violently. Few empirical studies have examined the relationship between anti-mask attitudes and mask non-adherence and little is known about how such attitudes relate to one another or other factors (e.g., non-adherence to social distancing, anti-vaccination attitudes). To investigate these issues, the present study surveyed 2,078 adults from the US and Canada. Consistent with other surveys, we found that most (84\%) people wore masks because of COVID-19. The 16\% who did not wear masks scored higher on most measures of negative attitudes towards masks. Network analyses indicated that negative attitudes about masks formed an intercorrelated network, with the central nodes in the network being (a) beliefs that masks are ineffective in preventing COVID-19, and (b) psychological reactance (PR; i.e., an aversion to being forced to wear masks). These central nodes served as links, connecting the network of anti-masks attitudes to negative attitudes toward SARSCoV2 vaccination, beliefs that the threat of COVID-19 has been exaggerated, disregard for social distancing, and political conservatism. Findings regarding PR are important because, theoretically, PR is likely to strengthen other anti-masks attitudes (e.g., beliefs that masks are ineffective) because people with strong PR react with anger and counter-arguments when their beliefs are challenged, thereby leading to a strengthening of their anti-mask beliefs. Implications for improving mask adherence are discussed.},
+  pmcid = {PMC7888611},
+  pmid = {33596207},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Taylor_Asmundson_2021_Negative attitudes about facemasks during the COVID-19 pandemic.pdf}
 }
 
 @article{thomasMethodsThematicSynthesis2008,
@@ -3375,6 +3460,21 @@ Subject\_term\_id: authorship;ethics;funding;journalism;publishing},
   abstract = {It is recognised as good practice to use qualitative methods to elicit users' views of internet-delivered health-care interventions during their development. This paper seeks to illustrate the advantages of combining usability testing with 'theoretical modelling', i.e. analyses that relate the findings of qualitative studies during intervention development to social science theory, in order to gain deeper insights into the reasons and context for how people respond to the intervention. This paper illustrates how usability testing may be enriched by theoretical modelling by means of two qualitative studies of users' views of the delivery of information in an internet-delivered intervention to help users decide whether they needed to seek medical care for their cold or flu symptoms.},
   keywords = {Diagnostic Question,Insuperable Barrier,Social Science Theory,Usability Testing,Vocational Qualification},
   file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Yardley et al_2010_Understanding reactions to an internet-delivered health-care intervention.pdf}
+}
+
+@article{yilmazHesitancyRegardingMedical,
+  title = {Hesitancy {{Regarding Medical Advice}} on {{COVID-19}}: {{An Emergency Department Perspective}}},
+  shorttitle = {Hesitancy {{Regarding Medical Advice}} on {{COVID-19}}},
+  author = {Yilmaz, Sarper and {\c C}olak, Figen {\"U}nal and H{\"o}kenek, Nihat M{\"u}jdat and Ak, Rohat},
+  journal = {Disaster Medicine and Public Health Preparedness},
+  pages = {1--11},
+  issn = {1935-7893},
+  doi = {10.1017/dmp.2022.18},
+  urldate = {2024-06-10},
+  abstract = {Objective: The rejection of or non-compliance with treatment arises for different reasons by patients who receive treatment recommendations for various diseases. These states are described by various concepts, such as discharge against medical advice (DAMA) and medication nonadherence (MNA). The basis of the study is to determine how these states have arisen during the coronavirus disease (COVID-19) pandemic. Method: The data of this study were collected through standardized interviews with 103 volunteer participants who were diagnosed with COVID-19 at different times and who did not use their prescribed medicine during the pandemic in Turkey. The data obtained in the research were analyzed through the MAXQDA qualitative analysis program. Results: As a result of the analysis of the data, 4 main themes and sub-codes have been reached: (1) prescribed medicine, (2) an information source for the COVID-19 period/treatment, (3) the reason for medication nonadherence, and (4) treatment of choice. When the approach toward treatment of patients who were diagnosed with COVID-19 and had started treatment by a physician was evaluated, it was revealed that the nonadherence state emerged as a cycle. In the initial period, nonadherence due to the medication itself was observed. The second period is when the patients recognize their disease and collect information from their environment. Although this period begins before the disease, the search for informative sources intensifies, especially once the diagnosis has been received. In the third period, with their diagnosis and the information they had obtained, patients consider the reasons to use the medication and then decide whether or not to use it. In the fourth period, the patients who will not use antivirals consider other medications, such as anti-flu, anticoagulant, supplements, and nutrition. Conclusion: Since a specific treatment protocol has not yet been revealed for COVID-19, a new conceptual framework is required. In the current condition, the state of ``hesitation for medical advice'' arises for non-hospitalized patients.},
+  pmcid = {PMC8961063},
+  pmid = {35045916},
+  file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/Yilmaz et al_Hesitancy Regarding Medical Advice on COVID-19.pdf}
 }
 
 @misc{YourWebsiteYour,
