--- a/references.bib
+++ b/references.bib
@@ -1051,6 +1051,12 @@
   file = {/Users/james/Zotero/storage/6XE97NT9/Ecommerce-Benchmark-Retail-Report-2016.pdf}
 }
 
+@misc{EpidemiologicFactorsMeSH,
+  title = {Epidemiologic {{Factors}} - {{MeSH}} - {{NCBI}}},
+  urldate = {2024-06-16},
+  howpublished = {https://www.ncbi.nlm.nih.gov/mesh/68015981}
+}
+
 @misc{EQUATORNetworkEnhancing,
   title = {The {{EQUATOR Network}} {\textbar} {{Enhancing}} the {{QUAlity}} and {{Transparency Of Health Research}}},
   urldate = {2020-02-14},
@@ -2159,6 +2165,16 @@ Subject\_term\_id: authorship;ethics;funding;journalism;publishing},
   abstract = {The qualitative research interview is an important data collection tool for a variety of methods used within the broad spectrum of medical education research. However, many medical teachers and life science researchers undergo a steep learning curve when they first encounter qualitative interviews, both in terms of new theory but also regarding new methods of inquiry and data collection. This article introduces the concept of qualitative research interviews for novice researchers within medical education, providing 12 tips for conducting qualitative research interviews.},
   pmid = {30261797},
   file = {/Users/james/Library/Mobile Documents/iCloud~QReader~MarginStudy/Documents/DPhil/McGrath et al_2019_Twelve tips for conducting qualitative research interviews.pdf}
+}
+
+@misc{MedicalSubjectHeadings,
+  type = {Product, {{Program}}, and {{Project Descriptions}}},
+  title = {Medical {{Subject Headings}} - {{Home Page}}},
+  publisher = {U.S. National Library of Medicine},
+  urldate = {2024-06-16},
+  copyright = {Public Domain},
+  howpublished = {https://www.nlm.nih.gov/mesh/meshhome.html},
+  langid = {english}
 }
 
 @misc{MedRxivOrgPreprint,
